# snaplify

./: .dockerignore  .env.example  .gitignore  .prettierignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  eslint.config.js  lighthouserc.js  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  vitest.workspace.ts
.github/workflows/: ci.yml  deploy.yml  docker.yml
apps/landing/: package.json  svelte.config.js  vitest.config.ts
apps/reference/: .env.example  app.vue  error.vue  nuxt.config.ts  package.json
archive/: README.md
archive/docs/: coding-standards.md  full-codebase-map.md  launch-checklist.md  phase-11-plan.md
deploy/: .env.prod.example  README.md  app-spec.yaml  docker-compose.federation.yml  docker-compose.prod.yml  droplet-setup.sh  federation-seed.ts  nginx.conf  package.json
deploy/__tests__/: ci.test.ts  docker.test.ts  scripts.test.ts
deploy/migrations/: 001-rename-communities-to-hubs.sql
docs/: a11y-audit.md  architecture.md  coding-standards.md  contributing.md  deployment.md  federation-notes.md  federation-plan.md  federation.md  launch-checklist.md  phase-11-plan.md  plan-v2.md  plan-v3-engineering.md  plan.md  quickstart.md
docs/adr/: 001-sveltekit.md  002-drizzle-postgres.md  003-better-auth.md  004-fedify.md  005-tiptap.md  006-css-tokens.md  007-feature-flags.md  008-turborepo.md  009-auth-schema-mapping.md  010-ap-sso-plugins.md  (+12 more)
tools/create-snaplify/: Cargo.toml
tools/create-snaplify/src/: lib.rs  main.rs  prompts.rs  scaffold.rs  template.rs
tools/create-snaplify/tests/: cli.rs
(+1199 files in other folders)
