[package]
name = "create-snaplify"
version = "0.1.0"
edition = "2021"
description = "CLI tool for scaffolding new Snaplify instances"
license = "MIT"

[lib]
name = "create_snaplify"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
console = "0.15"
indicatif = "0.17"
toml = "0.8"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
